[project]
name = "reel_system"
version = "0.1.0"
description = "A software written in Python (uv + pypy environment) to download all videos in the playlist in .mkv format and to generate playlist file in .m3u8 format."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
]
